[gd_scene load_steps=10 format=3 uid="uid://ox7pjwuvkx1c"]

[ext_resource type="Script" path="res://main.gd" id="1_ek3vr"]
[ext_resource type="PackedScene" uid="uid://bfitc7nf8btyu" path="res://curse_casting/Scenes/curse_controller.tscn" id="2_f20hy"]
[ext_resource type="PackedScene" uid="uid://cfw05jiujfnc7" path="res://curse_casting/Scenes/curse_screen.tscn" id="3_0ite1"]
[ext_resource type="PackedScene" path="res://levels/level_1.tscn" id="3_2dgmm"]
[ext_resource type="PackedScene" uid="uid://b4qayqdeo5jbx" path="res://characters/player.tscn" id="4_65u8e"]
[ext_resource type="Texture2D" uid="uid://xojbifd5hl73" path="res://assets/Guide.png" id="5_bn77j"]
[ext_resource type="AudioStream" uid="uid://cly36utp2imlr" path="res://assets/music/Fight Song.wav" id="6_nw4j8"]
[ext_resource type="Script" path="res://audio_stream_player.gd" id="8_ekbtl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdm7w"]
bg_color = Color(0, 0, 0, 1)

[node name="Main" type="Node"]
script = ExtResource("1_ek3vr")

[node name="CurseController" parent="." node_paths=PackedStringArray("curse_screen", "display", "world") instance=ExtResource("2_f20hy")]
curse_screen = NodePath("../MiniGame/CurseScreen")
display = NodePath("../UI/Label")
world = NodePath("../World")

[node name="World" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="World"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Level" parent="World/SubViewport" instance=ExtResource("3_2dgmm")]

[node name="Player" parent="World/SubViewport" node_paths=PackedStringArray("curse_screen", "curse_controller", "health_label") instance=ExtResource("4_65u8e")]
curse_screen = NodePath("../../../MiniGame/CurseScreen")
curse_controller = NodePath("../../../CurseController")
health_label = NodePath("../../../UI2/PlayerHealthLabel")

[node name="Guidebook" type="TextureRect" parent="."]
visible = false
layout_direction = 1
offset_left = 23.0
offset_top = 11.0
offset_right = 337.0
offset_bottom = 325.0
texture = ExtResource("5_bn77j")
expand_mode = 1
stretch_mode = 4

[node name="UI" type="BoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_right = 41.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="Label" type="Label" parent="UI"]
editor_description = "Label for cursed typing"
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/normal = SubResource("StyleBoxFlat_sdm7w")
text = "test text"
uppercase = true

[node name="UI2" type="BoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="TimeLabel" type="Label" parent="UI2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Time Elapsed: 0:00"

[node name="PlayerHealthLabel" type="Label" parent="UI2"]
layout_mode = 2
text = "Health: "

[node name="EscapedLabel" type="Label" parent="UI2"]
layout_mode = 2
text = "Escaped:"

[node name="MiniGame" type="Node" parent="."]

[node name="CurseScreenBG" type="ColorRect" parent="MiniGame"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.473976, 0.473976, 0.473976, 1)

[node name="CurseScreen" parent="MiniGame" node_paths=PackedStringArray("curse_controller", "world", "bg", "ui", "accuracy_label") instance=ExtResource("3_0ite1")]
visible = false
curse_controller = NodePath("../../CurseController")
world = NodePath("../../World")
bg = NodePath("../CurseScreenBG")
ui = NodePath("../UI")
accuracy_label = NodePath("../UI/AccuracyLabel")

[node name="UI" type="BoxContainer" parent="MiniGame"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1.0
offset_bottom = 23.0
grow_horizontal = 0
size_flags_horizontal = 3

[node name="AccuracyLabel" type="Label" parent="MiniGame/UI"]
layout_mode = 2
text = "ACCURACY: 100%"

[node name="Popups" type="BoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" type="PopupPanel" parent="Popups"]
initial_position = 2
size = Vector2i(400, 200)

[node name="BoxContainer" type="VBoxContainer" parent="Popups/GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 396.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="Popups/GameOver/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Game Over!"

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/GameOver/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="TimeElapsedLabel" type="Label" parent="Popups/GameOver/BoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Time Elapsed: "

[node name="BestTimeLabel" type="Label" parent="Popups/GameOver/BoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Best Time: "

[node name="HBoxContainer2" type="HBoxContainer" parent="Popups/GameOver/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="PreviousLevelButton" type="Button" parent="Popups/GameOver/BoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Previous Level"

[node name="RetryButton" type="Button" parent="Popups/GameOver/BoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Retry?"

[node name="NextLevelButton" type="Button" parent="Popups/GameOver/BoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Next Level"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nw4j8")
volume_db = -16.865
autoplay = true
script = ExtResource("8_ekbtl")

[connection signal="pressed" from="Popups/GameOver/BoxContainer/HBoxContainer2/PreviousLevelButton" to="." method="_on_previous_level_button_pressed"]
[connection signal="pressed" from="Popups/GameOver/BoxContainer/HBoxContainer2/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Popups/GameOver/BoxContainer/HBoxContainer2/NextLevelButton" to="." method="_on_next_level_button_pressed"]
